[gd_scene load_steps=11 format=2]

[ext_resource path="res://Player.gd" type="Script" id=1]
[ext_resource path="res://PlayerBody.gd" type="Script" id=2]
[ext_resource path="res://Ship.dae" type="PackedScene" id=3]
[ext_resource path="res://Shield.gd" type="Script" id=4]
[ext_resource path="res://ShieldPanel.tscn" type="PackedScene" id=5]
[ext_resource path="res://ui/StickyBarBorder.png" type="Texture" id=6]
[ext_resource path="res://ui/StickyBar.png" type="Texture" id=7]
[ext_resource path="res://ui/BarBorder.png" type="Texture" id=8]
[ext_resource path="res://ui/Bar.png" type="Texture" id=9]

[sub_resource type="CapsuleShape" id=1]

radius = 1.43387
height = 2.02136

[node name="Player" type="Spatial"]

script = ExtResource( 1 )

[node name="KinematicBody" type="KinematicBody" parent="." index="0" groups=[
"bullet_can_hit",
]]

input_ray_pickable = true
input_capture_on_drag = false
collision_layer = 1
collision_mask = 1
axis_lock_linear_x = false
axis_lock_linear_y = false
axis_lock_linear_z = false
axis_lock_angular_x = false
axis_lock_angular_y = false
axis_lock_angular_z = false
collision/safe_margin = 0.001
script = ExtResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="KinematicBody" index="0"]

transform = Transform( 1, 0, 0, 0, -4.37114e-008, 1, 0, -1, -4.37114e-008, 0, 0, 0 )
shape = SubResource( 1 )
disabled = false

[node name="Ship" parent="KinematicBody" index="1" instance=ExtResource( 3 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.27527 )

[node name="Shield" type="Spatial" parent="." index="1"]

script = ExtResource( 4 )
_sections_unfolded = [ "Transform" ]

[node name="ShieldPanel" parent="Shield" index="0" instance=ExtResource( 5 )]

transform = Transform( 3.06138, 0, 0, 0, 3.06138, 0, 0, 0, 3.06138, 0, 0, 0 )
_sections_unfolded = [ "Transform" ]

[node name="ShieldPanel2" parent="Shield" index="1" instance=ExtResource( 5 )]

transform = Transform( -1.53069, 0, 2.65123, 0, 3.06138, 0, -2.65123, 0, -1.53069, 0, 0, 0 )
_sections_unfolded = [ "Transform" ]

[node name="ShieldPanel3" parent="Shield" index="2" instance=ExtResource( 5 )]

transform = Transform( -1.53069, 0, -2.65123, 0, 3.06138, 0, 2.65123, 0, -1.53069, 0, 0, 0 )
_sections_unfolded = [ "Transform" ]

[node name="StickyAnchors" type="Spatial" parent="Shield" index="3"]

[node name="Bullets" type="Spatial" parent="." index="2"]

_sections_unfolded = [ "Transform" ]

[node name="UI" type="MarginContainer" parent="." index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
_sections_unfolded = [ "Size Flags" ]

[node name="VBoxContainer" type="VBoxContainer" parent="UI" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 20.0
margin_top = 20.0
margin_right = 1004.0
margin_bottom = 580.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 2

[node name="CenterContainer2" type="CenterContainer" parent="UI/VBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 471.0
margin_right = 984.0
margin_bottom = 509.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
use_top_left = false

[node name="TextureRect" type="TextureRect" parent="UI/VBoxContainer/CenterContainer2" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 364.0
margin_right = 620.0
margin_bottom = 38.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 6 )
stretch_mode = 0

[node name="StickyBar" type="TextureProgress" parent="UI/VBoxContainer/CenterContainer2" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 372.0
margin_top = 6.0
margin_right = 612.0
margin_bottom = 32.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
min_value = 0.0
max_value = 100.0
step = 1.0
page = 0.0
value = 100.0
exp_edit = false
rounded = false
texture_under = null
texture_over = null
texture_progress = ExtResource( 7 )
radial_fill_degrees = 360.0
radial_center_offset = Vector2( 0, 0 )
nine_patch_stretch = false
_sections_unfolded = [ "Textures" ]

[node name="CenterContainer" type="CenterContainer" parent="UI/VBoxContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 513.0
margin_right = 984.0
margin_bottom = 560.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
use_top_left = false

[node name="TextureRect" type="TextureRect" parent="UI/VBoxContainer/CenterContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 364.0
margin_right = 620.0
margin_bottom = 47.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 8 )
stretch_mode = 0

[node name="HealthBar" type="TextureProgress" parent="UI/VBoxContainer/CenterContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 372.0
margin_top = 6.0
margin_right = 612.0
margin_bottom = 41.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
min_value = 0.0
max_value = 100.0
step = 1.0
page = 0.0
value = 100.0
exp_edit = false
rounded = false
texture_under = null
texture_over = null
texture_progress = ExtResource( 9 )
radial_fill_degrees = 360.0
radial_center_offset = Vector2( 0, 0 )
nine_patch_stretch = false
_sections_unfolded = [ "Textures" ]


